package Java_PP.AcoplamentoFracoCoesaoAlta;

interface MetodoPagamento {
    void efetuarPagamento(double valor);
}
