package Java_PP.AcoplamentoFracoCoesaoAlta;

class Produto {
    private double preco;

    public Produto(String nome, double preco) {
        this.preco = preco;
    }

    public double getPreco() {
        return preco;
    }
}